# 0243179_SistemasDistribuidos

./: Makefile  README.md  go.mod  go.sum  server.go  store.go
Log/: Log.go  Log_test.go  index.go  index_text.go  segment.go  segment_test.go  store.go
api/v1/: log.pb.go  log.proto  log_grpc.pb.go
cert/: ca-key.pem  ca.csr  ca.pem  client-key.pem  client.csr  client.pem  nobody-client-key.pem  nobody-client.csr  nobody-client.pem  root-client-key.pem  root-client.csr  root-client.pem  server-key.pem  server.csr  server.pem
config/: files.go
log2/: Cargo.toml  build.rs  rustc-ice-2024-09-19T19_16_20-82224.txt
log2/src/: log.proto  main.rs
log2/src/comp/: config.rs  index.rs  log.rs  mod.rs  record.rs  segments.rs  store.rs
server/: server.go  server_test.go
test/: ca-config.json  ca-csr.json  client-csr.json  server-csr.json
