[package]
name = "log"
version = "0.1.0"
edition = "2021"

build = "build.rs"
[dependencies]
byteorder = "1.5.0"
memmap2 = "0.9.4"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }


prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"
